# nestcam

./: .env.example  .gitignore  README.md  pyproject.toml
sql/: inspect.sql  robin_detections_view.sql  setup.sql
src/nestcam/: cli.py  config.py  core.py  inference.py  snowflake_utils.py  video_utils.py
src/nestcam/capture/: auth.py  ring_client.py
streamlit/: app.py
